# planets

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  slanggen.toml
.hypothesis/constants/: 07d7cd42517c7971  217bb5730df8c64a  2d8f36ac4b4e5b30  5b2f2f44fbbf86e4  da39a3ee5e6b4b0d  fa1f2c0c7428cd7f
.hypothesis/examples/04e6b3400353b141/: 455e5714d817bc24  cb9e924fd4c43739
.hypothesis/examples/cb9e924fd4c43739/: 05bee355f3959275
artefacts/: config.json  history.txt  model.pth  tokenizer.json
assets/: straattaal.txt
backend/: app.py  requirements.txt
backend/static/: index.html
preprocess/: preprocess.ipynb
preprocess/raw/: exoplanet.eu_catalog_17-11-25_11_47_48.csv
tests/: test_api.py  test_generation.py  test_integration.py  test_model.py
